--- a/app/src/main/res/layout/activity_image_to_pdfactivity.xml
+++ b/app/src/main/res/layout/activity_image_to_pdfactivity.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.OpenTest">
+    tools:context=".activities.ImageToPDFActivity">
 
     <com.github.barteksc.pdfviewer.PDFView
-        android:id="@+id/openPdfViewer"
+        android:id="@+id/image_to_pdf"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
