--- a/app/src/main/res/layout/fragment_dialog_edit_file.xml
+++ b/app/src/main/res/layout/fragment_dialog_edit_file.xml
@@ -58,6 +58,7 @@
 
 
         <ImageView
+            android:layout_marginEnd="5dp"
             android:id="@+id/img_tick"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
